Rebuild Arcane as a detached game overlay